--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,11 +1,12 @@
 /* Buttons */
 @use '../abstracts/variables';
 .btn {
-  border-radius: 4rem;
+  border-radius: 4px;
   border: none;
   text-align: center;
   font-size: variables.$font-size-small;
   font-family: variables.$font-primary;
+  font-weight: variables.$regular;
   text-transform: uppercase;
   padding: 1.2rem;
   padding-top: 1.6rem;
