Updated font weight of homepage and added new font

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -21,7 +21,7 @@ $color-purple--bootstrap: #553C7B;
 
 /* Font-family */
 // $font-primary: 'zippy', sans-serif;
-$font-primary: 'Lato', sans-serif;
+$font-primary: 'Fira Sans', sans-serif;
 $font-secondary: 'Montserrat', sans-serif;
 $font-hero: 'adventium_demoregular', sans-serif;
 
