--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -6,10 +6,9 @@
   text-align: center;
   font-size: variables.$font-size-small;
   font-family: variables.$font-primary;
-  font-weight: variables.$regular;
+  font-weight: variables.$light;
   text-transform: uppercase;
   padding: 1.2rem;
-  padding-top: 1.6rem;
   width: 16rem;
   transition: all 0.5s;
   cursor: pointer;
