--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -7,16 +7,6 @@
       margin-right: 3.2rem;
   }
   &__link {
-      // font-family: variables.$font-primary;
-      // color: variables.$color-white;
-      // font-weight: 400;
-      // font-size: variables.$font-size-small;
-      // margin-right: 1.6rem;
-      // text-transform: uppercase;
-      // margin-top: .6rem;
-      // display: inline-block;
-      // position: relative;
-
       font-weight: variables.$light;
       font-size: variables.$font-size-small;
       text-transform: uppercase;
@@ -28,17 +18,17 @@
       position: relative;
       opacity: 0.75;
       &:hover {
-          font-weight: variables.$medium;
+          font-weight: variables.$regular;
           color: variables.$color-blue;
       }
       &::before {
-        transition: 300ms;
-        height: 5px;
+        transition: 200ms;
+        height: .2rem;
         content: "";
         position: absolute;
         background-color: variables.$color-blue;
         width: 0%;
-        bottom: 10px;
+        bottom: .8rem;
       }
       &:hover::before {
         width: 100%;
@@ -65,42 +55,3 @@
       }
   }
 }
-
-// .nav-link {
-//   font-weight: bold;
-//   font-size: 14px;
-//   text-transform: uppercase;
-//   text-decoration: none;
-//   color: #031D44;
-//   padding: 20px 0px;
-//   margin: 0px 20px;
-//   display: inline-block;
-//   position: relative;
-//   opacity: 0.75;
-// }
-
-// .nav-link:hover {
-//   opacity: 1;
-// }
-
-// .nav-link::before {
-//   transition: 300ms;
-//   height: 5px;
-//   content: "";
-//   position: absolute;
-//   background-color: #031D44;
-// }
-
-// .nav-link-ltr::before {
-//   width: 0%;
-//   bottom: 10px;
-// }
-
-// .nav-link-ltr:hover::before {
-//   width: 100%;
-// }
-
-// .navbar-nav2 {
-//   display: flex;
-//   flex-direction: column;
-// }
