--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -61,6 +61,7 @@
 
   &__button {
     background-color: variables.$color-green-light;
+    width: 100%;
 
     &:hover {
       background-image: linear-gradient(rgba(0, 0, 0, 0.2) 0 0);
