--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -1,5 +1,7 @@
 /* Navbar */
 @use '../abstracts/variables';
+@use '../base/animations';
+
 .navbar {
   padding: 2.4rem 4.8rem .8rem;
   background: variables.$color-green;
@@ -18,12 +20,11 @@
       position: relative;
       opacity: 0.75;
       &:hover {
-          font-weight: variables.$regular;
           color: variables.$color-blue;
       }
       &::before {
         transition: 200ms;
-        height: .2rem;
+        height: .3rem;
         content: "";
         position: absolute;
         background-color: variables.$color-blue;
@@ -38,6 +39,13 @@
       &--portfolio {
           height: 4rem;
           width: 4rem;
+
+        &:hover {
+          animation-name: logo-spin;
+          animation-duration: .3s;
+          animation-timing-function: linear;
+          animation-iteration-count: infinite;
+        }
       }
   }
 
@@ -49,9 +57,9 @@
           margin-right: 1.6rem;
       }
 
-
       &:hover {
           color: variables.$color-blue;
       }
   }
 }
+
