--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-navbar></app-navbar>
-<app-hero></app-hero>
-<app-page-preview></app-page-preview>
-<app-contact-form></app-contact-form>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
