--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -24,7 +24,7 @@
                   </a>
               </li>
               <li class="nav-item navbar__social-container">
-                <a href="https://www.linkedin.com/in/lawrence-dovin/" target="_blank" rel="noreferrer">
+                <a href="https://github.com/lawrencedovin" target="_blank" rel="noreferrer">
                   <i class="bi bi-github nav-link navbar__social" ></i>
                 </a>
               </li>
