--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
       <div class="row">
         <div class="col-md-12 d-flex justify-content-end">
-            <a href="#" class="footer__button">
+            <a class="footer__button" (click)="scrollToTop()">
                 <img src="../../../assets/images/top-icon.svg" alt="" class="footer__button-icon" id="footerButtonIcon" />
             </a>
         </div>
