Added initial tab routing

--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -10,10 +10,8 @@
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/characters/dark" routerLinkActive="active">
-      Dark
+    <a class="nav-link" routerLink="/portfolio/react" routerLinkActive="active">
+      React
     </a>
   </li>
 </ul>
-
-<router-outlet></router-outlet>
