--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -5,6 +5,11 @@
     </a>
   </li>
   <li class="nav-item">
+    <a class="nav-link" routerLink="/portfolio/javascript" routerLinkActive="active">
+      JavaScript
+    </a>
+  </li>
+  <li class="nav-item">
     <a class="nav-link" routerLink="/portfolio/angular" routerLinkActive="active">
       Angular
     </a>
@@ -12,6 +17,36 @@
   <li class="nav-item">
     <a class="nav-link" routerLink="/portfolio/react" routerLinkActive="active">
       React
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/portfolio/nodejs" routerLinkActive="active">
+      Node.js
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/portfolio/express" routerLinkActive="active">
+      Express
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/portfolio/python" routerLinkActive="active">
+      Python
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/portfolio/flask" routerLinkActive="active">
+      Flask
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/portfolio/sass" routerLinkActive="active">
+      Sass
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/portfolio/bootstrap" routerLinkActive="active">
+      Bootstrap
     </a>
   </li>
 </ul>
