Added initial active link scss classes

--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -1,51 +1,51 @@
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/all" routerLinkActive="active">
+    <a class="nav-link" routerLink="/portfolio/all" routerLinkActive="active-link--all">
       All
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/javascript" routerLinkActive="active">
+    <a class="nav-link" routerLink="/portfolio/javascript" routerLinkActive="active-link--javascript">
       JavaScript
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/angular" routerLinkActive="active">
+    <a class="nav-link" routerLink="/portfolio/angular" routerLinkActive="active-link--angular">
       Angular
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/react" routerLinkActive="active">
+    <a class="nav-link" routerLink="/portfolio/react" routerLinkActive="active-link--react">
       React
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/nodejs" routerLinkActive="active">
+    <a class="nav-link" routerLink="/portfolio/nodejs" routerLinkActive="active-link--nodejs">
       Node.js
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/express" routerLinkActive="active">
+    <a class="nav-link" routerLink="/portfolio/express" routerLinkActive="active-link--express">
       Express
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/python" routerLinkActive="active">
+    <a class="nav-link" routerLink="/portfolio/python" routerLinkActive="active-link--python">
       Python
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/flask" routerLinkActive="active">
+    <a class="nav-link" routerLink="/portfolio/flask" routerLinkActive="active-link--flask">
       Flask
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/sass" routerLinkActive="active">
+    <a class="nav-link" routerLink="/portfolio/sass" routerLinkActive="active-link--sass">
       Sass
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/bootstrap" routerLinkActive="active">
+    <a class="nav-link" routerLink="/portfolio/bootstrap" routerLinkActive="active-link--bootstrap">
       Bootstrap
     </a>
   </li>
