Updated border colors of active tab route

--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -1,51 +1,51 @@
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/all" routerLinkActive="active-link--all">
+    <a class="nav-link nav-link-inactive" routerLink="/portfolio/all" routerLinkActive="nav-link-active nav-link-active--all">
       All
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/javascript" routerLinkActive="active-link--javascript">
+    <a class="nav-link nav-link-inactive" routerLink="/portfolio/javascript" routerLinkActive="nav-link-active nav-link-active--javascript">
       JavaScript
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/angular" routerLinkActive="active-link--angular">
+    <a class="nav-link nav-link-inactive" routerLink="/portfolio/angular" routerLinkActive="nav-link-active nav-link-active--angular">
       Angular
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/react" routerLinkActive="active-link--react">
+    <a class="nav-link nav-link-inactive" routerLink="/portfolio/react" routerLinkActive="nav-link-active nav-link-active--react">
       React
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/nodejs" routerLinkActive="active-link--nodejs">
+    <a class="nav-link nav-link-inactive" routerLink="/portfolio/nodejs" routerLinkActive="nav-link-active nav-link-active--nodejs">
       Node.js
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/express" routerLinkActive="active-link--express">
+    <a class="nav-link nav-link-inactive" routerLink="/portfolio/express" routerLinkActive="nav-link-active nav-link-active--express">
       Express
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/python" routerLinkActive="active-link--python">
+    <a class="nav-link nav-link-inactive" routerLink="/portfolio/python" routerLinkActive="nav-link-active nav-link-active--python">
       Python
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/flask" routerLinkActive="active-link--flask">
+    <a class="nav-link nav-link-inactive" routerLink="/portfolio/flask" routerLinkActive="nav-link-active nav-link-active--flask">
       Flask
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/sass" routerLinkActive="active-link--sass">
+    <a class="nav-link nav-link-inactive" routerLink="/portfolio/sass" routerLinkActive="nav-link-active nav-link-active--sass">
       Sass
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio/bootstrap" routerLinkActive="active-link--bootstrap">
+    <a class="nav-link nav-link-inactive" routerLink="/portfolio/bootstrap" routerLinkActive="nav-link-active nav-link-active--bootstrap">
       Bootstrap
     </a>
   </li>
