Added initial list item

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,1 +1,14 @@
-<p>list works!</p>
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-6">
+      <img src="../../../assets/images/previous-projects/images/qwikwire-landing-page.gif" alt="">
+      <h1>Qwikwire's Landing Page</h1>
+      <h2>AngularJS 1.6 | Angular Material | HTML | CSS</h2>
+      <p>Qwikwire’s revamped landing page which was designed and organized to allow the visitor to understand Qwikwire’s business model efficiently in a single page website.</p>
+      <div class="row">
+        <a href="#">View Project</a>
+        <a href="#">View Code</a>
+      </div>
+    </div>
+  </div>
+</div>
