updated form font weight

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -2,12 +2,14 @@
   <div class="row d-flex justify-content-center">
     <div class="col-md-6">
       <img src="../../../assets/images/previous-projects/images/qwikwire-landing-page.gif" alt="">
-      <h1>Qwikwire's Landing Page</h1>
-      <h2>AngularJS 1.6 | Angular Material | HTML | CSS</h2>
-      <p>Qwikwire’s revamped landing page which was designed and organized to allow the visitor to understand Qwikwire’s business model efficiently in a single page website.</p>
+      <h1 class="portfolio-project__title">Qwikwire's Landing Page</h1>
+      <h2 class="portfolio-project__technologies">AngularJS 1.6 | Angular Material | HTML | CSS</h2>
+      <p class="portfolio-project__description">Qwikwire’s revamped landing page which was designed and organized to allow the visitor to understand Qwikwire’s business model efficiently in a single page website.</p>
       <div class="row">
-        <a href="#">View Project</a>
-        <a href="#">View Code</a>
+        <div class="col">
+          <a href="#" class="portfolio-project__button btn">View Project</a>
+          <a href="#" class="portfolio-project__button btn">View Code</a>
+        </div>
       </div>
     </div>
   </div>
