--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -15,6 +15,7 @@
         &-title,
         &-details {
             font-family: variables.$font-primary;
+            font-weight: variables.$light;
             color: variables.$color-white;
             text-align: left;
             list-style: none;
@@ -70,6 +71,7 @@
   &__input,
   &__text-area {
     width: 32rem;
+    font-family: variables.$font-primary;
     font-size: variables.$font-size-small;
     font-weight: variables.$light;
     color: variables.$color-blue;
