--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row d-flex justify-content-center">
     <div class="col-md-6 text-center portfolio-project__container">
       <img src="../../../assets/images/previous-projects/images/qwikwire-landing-page.gif" alt="">
@@ -13,4 +13,10 @@
       </div>
     </div>
   </div>
+</div> -->
+<div>
+  <app-item
+    *ngFor="let project of projects"
+    [project]="project">
+  </app-item>
 </div>
