Addded nexter and natours images.

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -82,7 +82,7 @@
   &__image {
       max-height: 50vh;
       position: absolute;
-      top: 38vh;
+      top: 40.5%;
       transform: translateY(-50%);
       left: 40vw;
   }
