Updated tabs styles

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $color-green-light: #016B5B;
 $color-blue: #00BBD4;
 $color-red: #FF0000;
 $color-grey: #828282;
+$color-grey-light: #a4a4a4;
 
 $color-red--angular: #DD1B16;
 $color-blue--react: #61DBFB;
