--- a/src/styles/components/_tabs.scss
+++ b/src/styles/components/_tabs.scss
@@ -2,7 +2,9 @@
 @use '../abstracts/variables';
 
 .nav-tabs {
+  border-bottom: 1px solid variables.$color-grey-light;
   &__container {
+    margin-top: 4rem;
     display: inline-block;
   }
 }
@@ -18,49 +20,102 @@
   }
 
   &-inactive {
-    color: variables.$color-grey;
+    color: variables.$color-grey-light;
+    &:hover {
+      border-color:  variables.$color-grey-light variables.$color-grey-light variables.$color-white !important;
+    }
   }
 
   &-active {
-    color: variables.$color-black !important;
+    color: variables.$color-white !important;
     &--all {
-      border-color:  variables.$color-green variables.$color-green variables.$color-white !important;
+      background: variables.$color-green !important;
+      &:hover,
+      &:focus {
+        background: variables.$color-green !important;
+        border-color: variables.$color-green !important;
+      }
     }
 
     &--javascript {
-      border-color:  variables.$color-yellow--javascript variables.$color-yellow--javascript variables.$color-white !important;
+      background: variables.$color-yellow--javascript !important;
+      &:hover,
+      &:focus {
+        background: variables.$color-yellow--javascript !important;
+        border-color: variables.$color-yellow--javascript !important;
+      }
     }
 
     &--angular {
-      border-color:  variables.$color-red--angular variables.$color-red--angular variables.$color-white !important;
+      background: variables.$color-red--angular !important;
+      &:hover,
+      &:focus {
+        background: variables.$color-red--angular !important;
+        border-color: variables.$color-red--angular !important;
+      }
     }
 
     &--react {
-      border-color:  variables.$color-blue--react variables.$color-blue--react variables.$color-white !important;
+      background: variables.$color-blue--react !important;
+      &:hover,
+      &:focus {
+        background: variables.$color-blue--react !important;
+        border-color: variables.$color-blue--react !important;
+      }
     }
 
     &--nodejs {
-      border-color:  variables.$color-green--node variables.$color-green--node variables.$color-white !important;
+      background: variables.$color-green--node !important;
+      &:hover,
+      &:focus {
+        background: variables.$color-green--node !important;
+        border-color: variables.$color-green--node !important;
+      }
     }
 
     &--express {
-      border-color:  variables.$color-orange--express variables.$color-orange--express variables.$color-white !important;
+      background: variables.$color-orange--express !important;
+      &:hover,
+      &:focus {
+        background: variables.$color-orange--express !important;
+        border-color: variables.$color-orange--express !important;
+      }
     }
 
     &--python {
-      border-color:  variables.$color-blue--python variables.$color-blue--python variables.$color-white !important;
+      background: variables.$color-blue--python !important;
+      &:hover,
+      &:focus {
+        background: variables.$color-blue--python !important;
+        border-color: variables.$color-blue--python !important;
+      }
     }
 
     &--flask {
-      border-color:  variables.$color-black--flask variables.$color-black--flask variables.$color-white !important;
+      background: variables.$color-black--flask !important;
+      &:hover,
+      &:focus {
+        background: variables.$color-black--flask !important;
+        border-color: variables.$color-black--flask !important;
+      }
     }
 
     &--sass {
-      border-color:  variables.$color-pink--sass variables.$color-pink--sass variables.$color-white !important;
+      background: variables.$color-pink--sass !important;
+      &:hover,
+      &:focus {
+        background: variables.$color-pink--sass !important;
+        border-color: variables.$color-pink--sass !important;
+      }
     }
 
     &--bootstrap {
-      border-color:  variables.$color-purple--bootstrap variables.$color-purple--bootstrap variables.$color-white !important;
+      background: variables.$color-purple--bootstrap !important;
+      &:hover,
+      &:focus {
+        background: variables.$color-purple--bootstrap !important;
+        border-color: variables.$color-purple--bootstrap !important;
+      }
     }
   }
 }
