--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -3,10 +3,31 @@
   infiniteScroll
   [infiniteScrollDistance]="2"
   [infiniteScrollThrottle]="50"
-  (scrolled)="onScroll()"
+
 >
   <app-item
     *ngFor="let project of projects"
     [project]="project">
   </app-item>
 </div>
+
+<!-- spinner -->
+<!-- <div class="row pb-5">
+  <div class="col-md-12 p-5">
+    <ngx-spinner
+    bdOpacity = 0.9
+    bdColor = ""
+    size = "default"
+    color = "#581f87"
+    type = "ball-pulse-sync"
+    [fullScreen] = "false"
+    >
+    </ngx-spinner>
+  </div>
+</div> -->
+<!-- Alert no more post -->
+<!-- <div *ngIf = "!notEmptyPost" class="row pb-5">
+  <div class="col-md-12 d-flex justify-content-center">
+    <div class="text-muted h6 alert alert-secondary p-2">No more items to show</div>
+  </div>
+</div> -->
