--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,30 +1,25 @@
 <div
   class="search-results"
   infiniteScroll
-  [infiniteScrollDistance]="2"
-  [infiniteScrollThrottle]="50"
-
+  [infiniteScrollDistance]="scrollDistance"
+  [infiniteScrollThrottle]="throttle"
+  (scrolled)="onScrollDown()"
 >
   <app-item
-    *ngFor="let project of projects"
+    *ngFor="let project of currentProjects"
     [project]="project">
   </app-item>
 </div>
 
 <!-- spinner -->
-<!-- <div class="row pb-5">
-  <div class="col-md-12 p-5">
-    <ngx-spinner
-    bdOpacity = 0.9
-    bdColor = ""
-    size = "default"
-    color = "#581f87"
-    type = "ball-pulse-sync"
-    [fullScreen] = "false"
-    >
-    </ngx-spinner>
-  </div>
-</div> -->
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
 <!-- Alert no more post -->
 <!-- <div *ngIf = "!notEmptyPost" class="row pb-5">
   <div class="col-md-12 d-flex justify-content-center">
