--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -12,9 +12,9 @@
             <div class="hero__title">
                 Software Engineer
             </div>
-            <a href="/" class="hero__button btn">
+            <!-- <a href="#contact-form" class="hero__button btn">
               <span>Contact</span>
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
