--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -9,10 +9,11 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <div class="d-flex me-2">
         <div class="me-2">
-          <a class="nav-link navbar__link" routerLink="/about" routerLinkActive="nav-link--active" [routerLinkActiveOptions]="{exact: true}">About</a>
-          <a class="nav-link navbar__link" routerLink="/resume" routerLinkActive="nav-link--active">Resume</a>
+          <!-- <a class="nav-link navbar__link" routerLink="/about" routerLinkActive="nav-link--active" [routerLinkActiveOptions]="{exact: true}">About</a> -->
+          <!-- <a class="nav-link navbar__link" routerLink="/resume" routerLinkActive="nav-link--active">Resume</a> -->
           <a class="nav-link navbar__link" routerLink="/portfolio" routerLinkActive="nav-link--active">Portfolio</a>
-          <a class="nav-link navbar__link" routerLink="/contact" routerLinkActive="nav-link--active">Contact</a>
+          <!-- <a class="nav-link navbar__link" (click)="scroll" routerLinkActive="nav-link--active">Contact</a> -->
+          <!-- <a class="nav-link navbar__link" (click)="scroll" routerLinkActive="nav-link--active">Contact</a> -->
         </div>
       </div>
       <div class="me-auto"></div>
