--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,4 +1,4 @@
-<div class="contact-form__container d-flex align-items-center justify-content-center">
+<div class="contact-form__container d-flex align-items-center justify-content-center" #contactForm id="contact-form">
   <div class="contact-form__contact">
     <h1 class="contact-form__contact-title">
       Contact
