--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -20,7 +20,8 @@
       </div>
       <div class="col-md-9">
         <div class="hero__container--right">
-          <img src="../../../assets/images/hero.jpg" class="hero__image" alt="bird"/>
+          <!-- <img src="../../../assets/images/hero.jpg" class="hero__image" alt="bird"/> -->
+          <img src="assets/images/hero.jpg" class="hero__image" alt="bird"/>
         </div>
       </div>
     </div>
