--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
     <div class="col-md-6 text-center portfolio-project__container">
-      <img class="portfolio-project__image" src='../../../assets/images/previous-projects/images/{{ project.image }}' alt="">
+      <!-- <img class="portfolio-project__image" src='../../../assets/images/previous-projects/images/{{ project.image }}' alt=""> -->
+      <img class="portfolio-project__image" src='assets/images/previous-projects/images/{{ project.image }}' alt="">
       <h1 class="portfolio-project__title">{{ project.title }}</h1>
       <h2 class="portfolio-project__technologies">{{ project.technologies | technologiesArrayToString }}</h2>
       <p class="portfolio-project__description">{{ project.description }}</p>
