--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a  routerLink="/" class="navbar-brand navbar__logo">
-      <img src="../../../assets/images/portfolio-icon.svg" class="navbar__icon--portfolio"/>
+      <!-- <img src="../../../assets/images/portfolio-icon.svg" class="navbar__icon--portfolio"/> -->
+      <img src="assets/images/portfolio-icon.svg" class="navbar__icon--portfolio"/>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
