--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,6 @@
-<nav class="navbar navbar-expand-lg">
+<!-- <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a  routerLink="/" class="navbar-brand navbar__logo">
-      <!-- <img src="../../../assets/images/portfolio-icon.svg" class="navbar__icon--portfolio"/> -->
       <img src="assets/images/portfolio-icon.svg" class="navbar__icon--portfolio"/>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,13 +8,53 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <div class="d-flex me-2">
-        <div class="me-2">
-          <!-- <a class="nav-link navbar__link" routerLink="/about" routerLinkActive="nav-link--active" [routerLinkActiveOptions]="{exact: true}">About</a> -->
+        <div class="me-2"> -->
+          <!-- <a class="nav-link navbar__link" routerLink="/about" routerLinkActive="nav-link--active" [routerLinkActiveOptions]="{exact: true}">About</a>
           <!-- <a class="nav-link navbar__link" routerLink="/resume" routerLinkActive="nav-link--active">Resume</a> -->
-          <a class="nav-link navbar__link" routerLink="/portfolio" routerLinkActive="nav-link--active">Portfolio</a>
+          <!-- <a class="nav-link navbar__link" routerLink="/portfolio" routerLinkActive="nav-link--active">Portfolio</a> -->
           <!-- <a class="nav-link navbar__link" (click)="scroll" routerLinkActive="nav-link--active">Contact</a> -->
           <!-- <a class="nav-link navbar__link" (click)="scroll" routerLinkActive="nav-link--active">Contact</a> -->
+        <!-- </div>
+      </div>
+      <div class="me-auto"></div>
+      <div class="d-flex">
+          <ul class="navbar-nav me-2">
+              <li class="nav-item navbar__social-container">
+                  <a href="https://www.linkedin.com/in/lawrence-dovin/" target="_blank" rel="noreferrer">
+                    <i class="bi bi-linkedin nav-link navbar__social" ></i>
+                  </a>
+              </li>
+              <li class="nav-item navbar__social-container">
+                <a href="https://github.com/lawrencedovin" target="_blank" rel="noreferrer">
+                  <i class="bi bi-github nav-link navbar__social" ></i>
+                </a>
+              </li>
+          </ul>
+      </div>
+    </div> -->
+    <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <div class="d-flex">
+        <div class="me-2">
+          <a class="nav-link nav-link-ltr" href="#">Home</a>
+          <a class="nav-link nav-link-ltr" href="#">About</a>
+          <a class="nav-link nav-link-ltr" href="#">Contact</a>
+          <a class="nav-link nav-link-ltr" href="#">Blog</a>
         </div>
+      </div>
+    </div> -->
+  <!-- </div>
+</nav> -->
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <div class="container-fluid">
+    <a  routerLink="/" class="navbar-brand navbar__logo">
+      <img src="assets/images/portfolio-icon.svg" class="navbar__icon--portfolio"/>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="d-flex">
+        <a class="nav-link navbar__link" routerLink="/portfolio" routerLinkActive="nav-link--active">Portfolio</a>
       </div>
       <div class="me-auto"></div>
       <div class="d-flex">
@@ -33,16 +72,6 @@
           </ul>
       </div>
     </div>
-    <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <div class="d-flex">
-        <div class="me-2">
-          <a class="nav-link nav-link-ltr" href="#">Home</a>
-          <a class="nav-link nav-link-ltr" href="#">About</a>
-          <a class="nav-link nav-link-ltr" href="#">Contact</a>
-          <a class="nav-link nav-link-ltr" href="#">Blog</a>
-        </div>
-      </div>
-    </div> -->
   </div>
 </nav>
 <router-outlet></router-outlet>
