--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -1,6 +1,7 @@
 /* Navbar */
 @use '../abstracts/variables';
 @use '../base/animations';
+@use '../abstracts/mixins';
 
 .navbar {
   padding: 2.4rem 4.8rem .8rem;
@@ -19,6 +20,9 @@
       display: inline-block;
       position: relative;
       opacity: 0.75;
+      @include mixins.respond(tablet-landscape) { // width < 1200?
+        margin: 0px;
+      }
       &:hover {
           color: variables.$color-blue;
       }
